--- a/my-app/src/LABex02style.css
+++ b/my-app/src/LABex02style.css
@@ -10,6 +10,8 @@
 }
 
 .title {
+    display: flex;
+    justify-content: center;
     padding: 15px;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -25,6 +27,7 @@
 .navbar {
     margin-bottom: 10px;
     display: flex;
+    justify-content: center;
 }
 
 .nav-butt {
